@@ -1,3 +1,7 @@
+2025-12-01  Kevin Ushey <kevinushey@gmail.com>
+
+	* R/Attributes.R: Update OpenMP plugin for macOS
+
 2025-11-24  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/include/Rcpp/r/check_r_headers.h: Add RCPP_NO_R_HEADERS_CHECK
